move v1_4_7 tag