@@ -1,5 +1,8 @@
 package com.finalist.cmsc.rating.taglib;
 
+import java.io.IOException;
+
+import javax.servlet.jsp.JspException;
 import javax.servlet.jsp.tagext.SimpleTagSupport;
 
 import com.finalist.cmsc.rating.util.Rating;
@@ -14,16 +17,16 @@ public class GetTag extends SimpleTagSupport {
    private String user;
 
 
-   public void doTag() {
+   public void doTag() throws JspException, IOException {
       Rating rating = RatingUtil.getContentRating(number);
       getJspContext().setAttribute(var, new Float(rating.getRating()));
       if (countVar != null) {
-         getJspContext().setAttribute(countVar, Integer.valueOf(rating.getCount()));
+         getJspContext().setAttribute(countVar, new Integer(rating.getCount()));
       }
 
       if (userVar != null && user != null) {
          int userRating = RatingUtil.getUserRating(number, user);
-         getJspContext().setAttribute(userVar, Integer.valueOf(userRating));
+         getJspContext().setAttribute(userVar, new Integer(userRating));
       }
    }
 
